codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__app_server_deprecated_guardian_review_notifications_render_when_unmapped.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---








✗ Request denied for codex to access https://example.com:443

• Working (0s • esc to interrupt)


› Ask Codex to do anything

  ? for shortcuts                                                                                                        100% context left
