codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__apps_popup_loading_state.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: before
---
  Apps
  Loading installed and available apps...

› Loading apps...  This updates when the full list is ready.
